--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.22.2",
     "flowbite": "^1.6.5",
-    "flowbite-react": "^0.4.6",
+    "flowbite-react": "^0.4.11",
     "lightweight-charts": "^4.0.1",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "typewriter-effect": "^2.20.1",
