--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
 REACT_APP_COINRANKING_KEY=coinrankingffd88d7f1f3ded6efdd4294f69bc4947eaeea7a7afd17f66
-REACT_APP_FIREBASE_KEY=AIzaSyDsLomS9rnASZnQ53e2vuwJ6TDMcxtYesg
+
+REACT_APP_FIREBASE_KEY=AIzaSyA7vxZ4QOwLeDswz49d-RaLiJwXq20mEPw
+REACT_APP_AUTH_DOMAIN=coinport-9df55.firebaseapp.com
+REACT_APP_PROJECT_ID=coinport-9df55
+REACT_APP_STORAGE_BUCKET=coinport-9df55.appspot.com
+REACT_APP_MSG_SENDER_ID=766877393587
+REACT_APP_APP_ID=1:766877393587:web:e192ab2610260d89a086c6
+REACT_APP_MEASUREMENT_ID=G-4GHC1Z4LG5
